--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         name="searchQuery" 
         autocomplete="off" 
         placeholder="Search images..." />
-        <button type="submit">Search</button>
+        <button type="submit" class="search-btn">Search</button>
       </form>
     </div>
     
