--- a/src/index.html
+++ b/src/index.html
@@ -9,20 +9,19 @@
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <div class="search-form-container">
-      <form class="search-form" id="search-form">
-        <input 
-        type="text" 
-        name="searchQuery" 
-        autocomplete="off" 
-        placeholder="Search images..." />
-        <button type="submit" class="search-btn">Search</button>
-      </form>
+    <form class="search-form" id="search-form">
+      <input 
+      type="text" 
+      name="searchQuery" 
+      autocomplete="off" 
+      placeholder="Search images..." />
+      <button type="submit">Search</button>
+    </form>
+    <!-- <include src="./partials/example.html"></include> -->
+    <div class="gallery">
+      <!-- Картки зображень -->
     </div>
-    
-    <div class="gallery"></div>
-    <div class="end"></div>
-    <button type="button" class="load-more hide">Load more</button>
+    <button type="button" class="load-more" hidden>Load more</button>
 
     <include src="./partials/example.html"></include>
   </body>
